# PicoDVI

./: Readme.md
software/: CMakeLists.txt
software/apps/: CMakeLists.txt
software/apps/bad_apple/: main.c
software/apps/christmas_snowflakes/: main.c
software/apps/colour_terminal_audio/: CMakeLists.txt  main.c
software/apps/dht_logging/: main.c
software/apps/dual_display/: main.c
software/apps/mandel-full/: main.c
software/apps/mandelbrot/: main.c
software/apps/moon/: CMakeLists.txt  main.c
software/apps/moon_double_audio/: CMakeLists.txt  main.c
software/apps/sprite_bounce_audio/: main.c
software/apps/terminal/: main.c
software/apps/tiles_and_sprites/: main.c
software/apps/tiles_and_sprites_audio/: CMakeLists.txt  main.c
software/apps/vista/: main.c
software/apps/vista-palette/: CMakeLists.txt  main.c
software/include/: common_dvi_pin_configs.h
software/libdvi/: CMakeLists.txt  audio_ring.c  audio_ring.h  data_packet.c  data_packet.h  dvi.c  dvi.h  dvi_serialiser.c  dvi_timing.c  dvi_timing.h  tmds_encode.c
